gvb_interp/src/snapshots/gvb_interp__parser__parser_tests__expr__logical.snap
---
source: gvb_interp/src/parser.rs
expression: parse_line(line).0.to_string(line)

---
label: Some((0..2, Label(10)))
len: 46
eol: None
diagnostics: 
-----------------
3..46     LET <ID: A b %> = ((<ID: a> AND ((NOT <NUM: 4>) + <NUM: 2>)) OR (- ASC(LEFT$(<ID: f$>, <ID: k>))))

