gvb_interp/src/snapshots/gvb_interp__parser__parser_tests__expr__parse.snap
---
source: gvb_interp/src/parser.rs
expression: parse_expr(line).0.to_string(line)

---
diagnostics: 
-----------------
(<ID: a> + (b%[<NUM: 2>, FN k(<NUM: 7>)] * <NUM: 3>))
