gvb_interp/src/snapshots/gvb_interp__parser__parser_tests__expr__parse_redundant_tokens.snap
---
source: gvb_interp/src/parser.rs
expression: parse_expr(line).0.to_string(line)

---
diagnostics: 
  Error<23..31>: 多余的代码
-----------------
(<ID: a> + (b%[<NUM: 2>, FN k(<NUM: 7>)] * <NUM: 3>))
