gvb_interp/src/snapshots/gvb_interp__parser__parser_tests__expr__precedence.snap
---
source: gvb_interp/src/parser.rs
expression: parse_line(line).to_string(line)

---
label: Some(Label(10))
len: 61
eol: Lf
diagnostics: 
-----------------
3..60     LET a[(<ID: b> + <NUM: 1>), <NUM: 2>] = ((((- <NUM: 70.1>) + (+ <NUM: 2>)) + FN foo$(((<ID: k> * <NUM: 3>) - (<NUM: 2> * ((<ID: k> - <NUM: 3>) >= <NUM: 2>))))) - ((<NUM: 5> / <ID: ab 3>) * (<NUM: 2> ^ <ID: t  $>)))

