gvb_interp/src/snapshots/gvb_interp__parser__parser_tests__expr__relation.snap
---
source: gvb_interp/src/parser.rs
expression: parse_line(line).0.to_string(line)

---
label: Some((0..2, Label(10)))
len: 67
eol: None
diagnostics: 
-----------------
3..65     LET <ID: A b$> = (((<ID: b> * <NUM: 3>) > <NUM: 5>) <> (<NUM: 1 2 . 3 e - 5 6> <= (NOT CHR$((<STR: "1"> = <INKEY$>)))))

