gvb_interp/src/snapshots/gvb_interp__parser__parser_tests__expr__string.snap
---
source: gvb_interp/src/parser.rs
expression: parse_line(line).0.to_string(line)

---
label: Some((0..2, Label(10)))
len: 19
eol: None
diagnostics: 
-----------------
3..19     LET <ID: A b$> = (<STR: ""> + <STR: "ab cd E>)

